fix the center align-item on right side
When i saw the solution, i saw, that i forgot to center align-items. I shortened the code som .left and .right was in the same codeline, since they have the same syntaxes.

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -25,16 +25,13 @@ body {
   height: 48px;
 }
 
-.left {
+.left,
+.right {
   display: flex;
   align-items: center;
   gap: 16px;
 }
 
-.right {
-  display: flex;
-  gap: 16px;
-}
 
 .logo {
   color: rebeccapurple;
